fixed: text and icons alignement

--- a/style.css
+++ b/style.css
@@ -210,6 +210,7 @@ main section {
       width: min(50%, 500px);
       background-color: transparent;
       padding: 0;
+      align-items: unset;
     }
 
     .section__image {
